--- a/DAN_XLII_Kristina_Garcia_Francisco/View/AddUser.xaml
+++ b/DAN_XLII_Kristina_Garcia_Francisco/View/AddUser.xaml
@@ -105,8 +105,8 @@
         <ComboBox Grid.Column="3" Grid.Row="19" Name="cmbManager" Height="20" Width="150" DisplayMemberPath="FullName"
                   IsEditable="False" ItemsSource="{Binding ManagerList, UpdateSourceTrigger=LostFocus}"
                   SelectedItem="{Binding Manager, UpdateSourceTrigger=PropertyChanged}"/>
-        
-        <Button Grid.Column="3" Grid.Row="23" Name="btnSave" Content="Save" Height="20" Width="70" HorizontalAlignment="Left"
+
+        <Button Grid.Column="3" Grid.Row="23" IsDefault="True" Name="btnSave" Content="Save" Height="20" Width="70" HorizontalAlignment="Left"
                 Command="{Binding Save, UpdateSourceTrigger=PropertyChanged}">
             <Button.Style>
                 <Style TargetType="{x:Type Button}">
@@ -136,7 +136,7 @@
                 </Style>
             </Button.Style>
         </Button>
-        <Button Grid.Column="3" Grid.Row="23" Name="btnClose" Content="Close" Height="20" Width="70" HorizontalAlignment="Right"
+        <Button Grid.Column="3" Grid.Row="23" Name="btnClose" IsCancel="True" Content="Close" Height="20" Width="70" HorizontalAlignment="Right"
                 Command="{Binding Close, UpdateSourceTrigger=PropertyChanged}"/>
     </Grid>
 </Window>
